added complete leaderboard styling

--- a/asg_2/styles.css
+++ b/asg_2/styles.css
@@ -1,4 +1,3 @@
-
 header {
     display: flex;
     justify-content: space-between;
@@ -157,62 +156,56 @@ footer{
     
 }
 
-#attempt_quiz img[alt="Quiz Banner"] {
+#attempt_quiz img {
   width: 100%;
   height: 150px;
   border-radius: 10px;
 }
 
-#attempt_quiz main > h2:first-of-type,
-#attempt_quiz main > p:nth-of-type(-n+3) {
-  background-color: lightblue;
-  padding: 20px;
+#leaderboard table {
+  border-collapse: collapse;
+  width: 100%;
   text-align: center;
-  border-radius: 10px;
-  display: block; 
+  font-size: 20px;
 }
 
-
-
-#attempt_quiz input[type="radio"], 
-#attempt_quiz input[type="checkbox"] {
-  margin: 10px 0;
-}
-
-#attempt_quiz label {
-  display: block;
-  background-color: #cacaca;
-  padding: 10px;
-  border-radius: 5px;
-  margin-bottom: 5px;
-}
-
-#attempt_quiz button {
-  padding: 10px 15px;
-  border: none;
-  cursor: pointer;
-  font-size: 1em;
-}
-
-#attempt_quiz button:hover {
-  transition: background 0.3s ease;
-}
-
-#attempt_quiz button[type="submit"] {
-  background-color: #D32F2F;
+#leaderboard table th {
+  background-color: #4CAF50;
   color: white;
+  font-size: 36px;
 }
 
-#attempt_quiz button[type="submit"]:hover {
-  background-color: #821b1b;
-}
-
-#attempt_quiz button:not([type="submit"]) {
-  background-color: lightblue;
+#leaderboard table tr:nth-child(2) th {
+  background-color: white;
   color: black;
+  font-weight:bold;
+  font-size: 20px;
 }
 
-#attempt_quiz button:not([type="submit"]):hover {
-  background-color: darkblue;
-  color: white;
+#leaderboard table tr:nth-child(3) {
+  background-color: #FFD700;
+}
+
+#leaderboard table tr:nth-child(4),
+#leaderboard table tr:nth-child(5) {
+  background-color: #C0C0C0;
+}
+
+#leaderboard table tr:nth-child(6) {
+  background-color: #CD7F32;
+}
+
+#leaderboard table tr:nth-child(7n+7) {
+  background-color: #f9f9f9;
+}
+
+#leaderboard table tr:nth-child(7n+8) {
+  background-color: #e4e2e2;
+}
+
+#leaderboard table img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: 2px solid #000;
 }
