--- a/asg_2/styles.css
+++ b/asg_2/styles.css
@@ -37,7 +37,7 @@ nav a:hover {
     display: inline-block;          
     text-align: left;               
 }
-
+/*-----------------------------------------------------------------------------------*/
 #lgoin_main {
     display: flex;
     justify-content: center;
@@ -81,16 +81,16 @@ nav a:hover {
   }
   
   
-  main#lgoin_main form a {
+  #lgoin_main form a {
     color: #004080;  
     text-decoration: none;
     margin-top: 10px;
   }
   
-  main#lgoin_main form a:hover {
+  #lgoin_main form a:hover {
     text-decoration: underline;
   }
-  
+  /*-----------------------------------------------------------------------------------*/
   #main_course{
     text-align: center;
   }
@@ -147,7 +147,7 @@ nav a:hover {
     text-align: center;
     color: #1e469c
   }
-  
+/*-----------------------------------------------------------------------------------*/
 footer{
     background-color: #004080;
     color: white;
@@ -155,13 +155,34 @@ footer{
     padding: 10px;
     
 }
-
+/*-----------------------------------------------------------------------------------*/
 #attempt_quiz img {
   width: 100%;
   height: 150px;
   border-radius: 10px;
 }
 
+#quiz_info{
+  text-align: center;
+  font-size:larger;
+  font-weight: bold;
+  background-color: lightblue;
+  padding: 20px;
+  margin-left: 250px;
+  margin-right: 250px;
+}
+#quiz_info h2,
+#quiz_info h2+p{
+  color: #1e469c;
+}
+
+
+
+
+
+
+
+/*-----------------------------------------------------------------------------------*/
 #leaderboard table {
   border-collapse: collapse;
   width: 100%;
